dist_man1_MANS=

if BUILD_BITCOINRELOADD
  dist_man1_MANS+=bitcoinreloadd.1
endif

if ENABLE_QT
  dist_man1_MANS+=bitcoinreload-qt.1
endif

if BUILD_BITCOINRELOAD_CLI
  dist_man1_MANS+=bitcoinreload-cli.1
endif

if BUILD_BITCOINRELOAD_TX
  dist_man1_MANS+=bitcoinreload-tx.1
endif

if ENABLE_WALLET
if BUILD_BITCOINRELOAD_WALLET
  dist_man1_MANS+=bitcoinreload-wallet.1
endif
endif
